1999-08-25  Harri Porten  <porten@kde.org>

	* main.cpp: work around copy&paste password bug by using a widget
	derived from QLineEdit that disables that overrides the buggy methods.
	* runtests.cpp (ppp_available): until our check can cope with the
	PPP code in 2.3 Linux kernels we'll simply skip that test for
	versions higher than 2.2.

1999-08-17  Harri Porten  <porten@kde.org>

	* modem.cpp: disabled CD line test. Responsible for too many problems.

1999-08-07  Harri Porten  <porten@kde.org>

	* modem.cpp: removed the "Mode 7bit" CompuServe hack after I saw
	that `chat' is always masking incoming data with 0x7F. The 7bit
	command was a scripting command and wouldn't have any effect
	before (and I read a posting from someone getting garbled text
	when dialing). Now we are back to the behaviour <= KDE 1.1 and
	CompuServe users won't need any extra scripting commands.
	Let's implement a real parity and data bit handling in the KDE 2.0
	branch. The current solution wasn't perfect. 

1999-07-22  Harri Porten  <porten@kde.org>

	* connect.cpp: visualize \n as <LF> in setExpect()'s debug messages
	* logviewer: rename `log' variable to `logList' to avoid clash with
	mathematical function on some systems. 
	* logview/loginfo.cpp: added mystrsep() function as strsep()
	replacement which is not POSIX compliant.

1999-07-19  Harri Porten  <porten@kde.org>

	* pppdata.cpp: fixed a cause of those "Timeout expired" errors: if 
	the user never set the speed of the serial port gpppdata would return
	an empty string as speed(). The modem initialization code would
	fall back to 57600 but no speed would be passed to pppd. Whatever
	pppd does in this case (I haven't checked the sources yet) breaks the
	negotiation process.

1999-07-13  Harri Porten  <porten@kde.org>

	* added "Mode 7bit" and "Mode 8bit" script commands for CompuServe
	users. 7bit will simply strip off the highest bit to deal with the
	incoming 7E1 data. Write operations are not affected.