@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "1.6.22"
+#define KPPPVERSION "1.6.23"
 #endif
